Distributor Self-Service Portal with ERP Integration/DistributorPortal/force-app/main/default/objects/Order_Request__c/Order_Request__c.object-meta.xml
<CustomObject>
    <label>Order_Request</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order_Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>